Fixing Gradle tests for JDK 17